Fixed:
6) Add word "beta" to BioMiner logo on all pages
7) Submit Your Data link shouldn't be visible until someone logs in
16) Clear button should clear red "Required" boxes
17) Import Gene list button label is truncated +
18) Need larger box for +/- buffer, +
21) Need to add the Thresholds to the Results table yellow box summary of terms
20) Attempted a gene list upload with one bad gene, did get a query warning red box put there was no message inside
22) The up and down arrows on the FDR threshold are odd, goes 0.1, to -0.9.  Should just go up or down by 0.1.  Likewise with the Log2Ratio, up or down by 0.1 increments. *

* Up/Down arrows removed

git-svn-id: svn://svn.code.sf.net/p/biominerqt/code-0/trunk@178 86439291-5e3c-406c-9808-073398cf6135

--- a/src/main/webapp/resources/css/biominer.css
+++ b/src/main/webapp/resources/css/biominer.css
@@ -1,3 +1,12 @@
+input[type='number'] {
+    -moz-appearance:textfield;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+}
+
 .table-container
 {
 	width: 100%;
@@ -58,26 +67,26 @@
 }
 
 
-@media (min-width: 768px) {
-  .navbar-form {
-    line-height: 40px;
-  }
-}
+/* @media (min-width: 768px) { */
+/*   .navbar-form { */
+/*     line-height: 40px; */
+/*   } */
+/* } */
 
-@media (max-width: 767px) {
-.navbar-nav > li > a {
-    line-height: 20px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+/* @media (max-width: 767px) { */
+/* .navbar-nav > li > a { */
+/*     line-height: 20px; */
+/*     padding-top: 10px; */
+/*     padding-bottom: 10px; */
     
-}
-}
-@media (min-width: 768px) {
-.navbar-nav {
-      float: left;
-	  margin: 0;
-    }
-}
+/* } */
+/* } */
+/* @media (min-width: 768px) { */
+/* .navbar-nav { */
+/*       float: left; */
+/* 	  margin: 0; */
+/*     } */
+/* } */
 
 .navbar-brand {
 padding-top: 13px;
@@ -260,7 +269,8 @@ label {
 body {
      font-family:  'Muli', Helvetica, Arial, sans-serif!important;	
      font-weight: 400 !important;
-      padding-top: 75px;   
+     padding-top: 75px;
+
      
 }
 
